# blackboxwm

./: .cvsignore  .gitignore  AUTHORS  AUTHORS.in  BUGS  Basemenu.cc  Basemenu.hh  Blackbox.ad  BlackboxAD  BlackboxMenu.ad  CHANGES  COMPLIANCE  COPYING  ChangeLog  ChangeLog-0.40.x  ChangeLog-0.50.x  ChangeLog-0.60.x  ChangeLog.bsetbg  Changelog  Changelog.swp  Clientmenu.cc  Clientmenu.hh  INSTALL  Imakeconfig  Imakefile  LICENSE  LinkedList.cc  Makefile  Makefile.am  Makefile.generic  Makefile.in  Menu.ad  MenuAD  NEWS  NEWS.in  README  README.bbtools  README.bsetbg  README.in  README.md  (+64 more)
app-defaults/: Blackbox-menu.ad  Blackbox-style.ad  Blackbox.ad  BlackboxMenu.ad  Imakefile  Makefile.generic  README
ccmalloc-0.2.3/: BUGS  FEATURES  INSTALL  Makefile  NEWS  README  TODO  USAGE  ccmalloc.cfg
data/: .cvsignore  Makefile  Makefile.am  Makefile.in  README  README.menu  README.style  menu.in  rc
data/brueghel/: Makefile.am  Makefile.in  README  babel.in  babel.txt  icarus.in  icarus.txt  littlebabel.in  littlebabel.txt  rebelangels.in  rebelangels.txt  stylesmenu.in
data/styles/: Artwiz  Blue  Cthulhain  Flux  Gray  Green  Makefile  Makefile.am  Makefile.in  Minimal  Nyz  Operation  Outcomes  Purple  Rampage  Rancor  Red  Results  Shade  Spiff  TDF  Twice  blackmagic  coldsteel  colorpurple  darkgreen  default  gnoid  green  onoid  pnoid  previous  results  slatebox  steelblue  steelbox  stylesmenu.in
doc/: .cvsignore  Makefile.am  Makefile.in  blackbox.1.in  bsetbg.1  bsetroot.1
doc/fr_FR/: Makefile.am  Makefile.in  blackbox.1.in  bsetroot.1
doc/ja_JP/: Makefile.am  Makefile.in  blackbox.1.in  bsetroot.1
doc/nl_NL/: Makefile.am  Makefile.in  blackbox.1.in  bsetroot.1
doc/sl_SI/: Makefile.am  Makefile.in  blackbox.1.in
lib/: AddWindow.c  Application.cc  Application.hh  BaseDisplay.cc  BaseDisplay.hh  Bitmap.cc  Bitmap.hh  Color.cc  Color.hh  Display.cc  Display.hh  EWMH.cc  EWMH.hh  EventHandler.hh  Font.cc  Font.hh  GCCache.cc  GCCache.hh  Image.cc  Image.hh  ImageControl.cc  Imakefile  Makefile.am  Makefile.generic  Makefile.in  Menu.cc  Menu.hh  Netwm.cc  Netwm.hh  OpenApp.c  Pen.cc  Pen.hh  PixmapCache.cc  PixmapCache.hh  README  Rect.cc  Rect.hh  RemoveWindow.c  Resource.cc  Resource.hh  (+17 more)
nls/: .cvsignore  Makefile.am  Makefile.in  blackbox-nls.hh  convert.awk  gnucnv.sed
nls/C/: BaseDisplay.m  Configmenu.m  Icon.m  Image.m  Makefile.am  Makefile.in  Translation.m  bsetroot.m  common.m  main.m
nls/da_DK/: BaseDisplay.m  Configmenu.m  Image.m  Makefile.am  Makefile.in  blackbox.m  bsetroot.m  main.m
nls/de_DE/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  Window.m  blackbox.m  bsetroot.m  main.m
nls/es_AR/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  blackbox.m  bsetroot.m  main.m
nls/es_ES/: BaseDisplay.m  Configmenu.m  Icon.m  Image.m  Makefile.am  Makefile.in  Screen.m  Slit.m  Toolbar.m  Translation.m  Window.m  Windowmenu.m  bsetroot.m  common.m  main.m
nls/et_EE/: Configmenu.m  Makefile.am  Makefile.in  blackbox.m  bsetroot.m  main.m
nls/fr_FR/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  Window.m  blackbox.m  bsetroot.m  main.m
nls/hu_HU/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  blackbox.m  bsetroot.m  main.m
nls/it_IT/: .cvsignore  BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  Window.m  blackbox.m  bsetroot.m  main.m
nls/ja_JP/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  Window.m  blackbox.m  bsetroot.m  main.m
nls/ko_KR/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  blackbox.m  bsetroot.m
nls/lv_LV/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  Toolbar.m  blackbox.m  main.m
nls/nl_NL/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  Window.m  blackbox.m  bsetroot.m  main.m
nls/no_NO/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  blackbox.m  bsetroot.m
nls/pl_PL/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  blackbox.m  bsetroot.m
nls/pt_BR/: BaseDisplay.m  Configmenu.m  Icon.m  Image.m  Makefile.am  Makefile.in  Screen.m  Translation.m  Windowmenu.m  Workspacemenu.m  blackbox.m  bsetroot.m  common.m  main.m
nls/ro_RO/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  blackbox.m  bsetroot.m
nls/ru_RU/: BaseDisplay.m  Configmenu.m  Icon.m  Image.m  Makefile.am  Makefile.in  Translation.m  Window.m  blackbox.m  bsetroot.m  main.m
nls/sk_SK/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  blackbox.m  bsetroot.m
nls/sl_SI/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  Window.m  blackbox.m  bsetroot.m  main.m
nls/sv_SE/: BaseDisplay.m  Configmenu.m  Icon.m  Image.m  Makefile.am  Makefile.in  Screen.m  Slit.m  Toolbar.m  Translation.m  Window.m  Windowmenu.m  blackbox.m  bsetroot.m  common.m  main.m
nls/tr_TR/: BaseDisplay.m  Configmenu.m  Icon.m  Image.m  Makefile.am  Makefile.in  Translation.m  blackbox.m  bsetroot.m  main.m
nls/uk_UA/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  blackbox.m  bsetroot.m
nls/zh_CN/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  Screen.m  Window.m  Windowmenu.m  blackbox.m  bsetroot.m  main.m
nls/zh_TW/: BaseDisplay.m  Configmenu.m  Makefile.am  Makefile.in  bsetroot.m  main.m
po/: LINGUAS  Makevars  POTFILES.in  blackbox.pot  da.po  da_DK.po  de.po  de_DE.po  es.po  es_AR.po  es_ES.po  et.po  et_EE.po  fr.po  fr_FR.po  hu.po  hu_HU.po  it.po  it_IT.po  (+29 more)
src/: .ccmalloc  .cvsignore  Application.cc  Application.hh  BaseDisplay.cc  BaseDisplay.hh  Basemenu.cc  Basemenu.hh  BlackboxResource.cc  BlackboxResource.hh  Clientmenu.cc  Clientmenu.hh  Color.cc  Color.hh  Configmenu.cc  Configmenu.hh  GCCache.cc  GCCache.hh  Icon.cc  Icon.hh  Iconmenu.cc  Iconmenu.hh  Image.cc  Image.hh  ImageControl.cc  Imakefile  LinkedList.cc  LinkedList.hh  Makefile  Makefile.am  Makefile.generic  Makefile.in  Netizen.cc  Netizen.hh  Rootmenu.cc  Rootmenu.hh  Screen.cc  Screen.hh  ScreenResource.cc  ScreenResource.hh  (+43 more)
util/: Makefile  Makefile.am  Makefile.in  bsetbg  bsetroot.c  bsetroot.cc  bsetroot.hh  bsetroot2.cc  bstyleconvert.cc
(+56 files in other folders)
