dnl configure.in for Blackbox 0.40.x beta - an X11 Window manager
dnl Copyright (c) 1997, 1998 by Brad Hughes, bhughes@tcac.net
dnl
dnl  This program is free software; you can redistribute it and/or modify
dnl  it under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation; either version 2 of the License, or
dnl  (at your option) any later version.
dnl
dnl  This program is distributed in the hope that it will be useful,
dnl  but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl  GNU General Public License for more details.
dnl
dnl  You should have received a copy of the GNU General Public License
dnl  along with this program; if not, write to the Free Software
dnl  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
dnl
dnl (See the included file COPYING / GPL-2.0)
dnl

dnl Initialize autoconf and automake
AC_INIT(src/blackbox.cc)
AM_INIT_AUTOMAKE(Blackbox,0.50.2,no-define)

dnl Determine default prefix
test x$prefix = "xNONE" && prefix="$ac_default_prefix"

dnl Check for various flavors of UNIX(r)
AC_PROG_CC
AC_AIX
AC_ISC_POSIX

dnl Locate required external software
AC_PROG_CXX
AC_PROG_INSTALL

AC_CHECK_PROGS(regex_cmd, sed)
if test x$regex_cmd = "x"; then
  AC_MSG_ERROR([error. sed is required to build the default menu file.])
fi

dnl Check for system header files
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h libgen.h locale.h malloc.h process.h signal.h stdio.h time.h unistd.h sys/param.h sys/select.h sys/time.h sys/types.h)
AC_HEADER_TIME

dnl Check for existance of basename(), setlocale() and strftime()
AC_CHECK_FUNCS(basename setlocale strftime)

dnl Check for X headers and libraries
AC_PATH_X
AC_PATH_XTRA

test x$no_x = "xyes" && AC_MSG_ERROR([error: Blackbox requires the X Window System libraries and headers.])

test x$x_includes = "x" && x_includes="/usr/include"
test x$x_libraries = "x" && x_libraries="/usr/lib"

CFLAGS="$CFLAGS $X_CFLAGS"
CXXFLAGS="$CXXFLAGS $X_CFLAGS"
LDFLAGS="$LDFLAGS $X_LIBS"
dnl $X_LIBS $X_PRE_LIBS

dnl Check for required functions in -lX11
AC_CHECK_LIB(X11, XOpenDisplay,
  LDFLAGS="$LDFLAGS -lX11",
  AC_MSG_RESULT([error.])
  AC_MSG_ERROR([Could not find XOpenDisplay in -lX11.])
)

LDFLAGS="$LDFLAGS $X_EXTRA_LIBS"

dnl Check for XShape extension support and proper library files.
SHAPE=""
AC_MSG_CHECKING([whether to build support for the XShape extension])
AC_ARG_ENABLE(
  shape, [  --enable-shape          enable support of the XShape extension [default=yes]],
  if test x$enableval = "xyes"; then
    AC_MSG_RESULT([yes])
    AC_CHECK_LIB(Xext, XShapeCombineShape,
      SHAPE="-DSHAPE"; LDFLAGS="$LDFLAGS -lXext",
      AC_MSG_WARN([XShape extension support requested but libraries couldn't be found.])
    )
  else
    AC_MSG_RESULT([no])
  fi,
  AC_MSG_RESULT([yes])
  AC_CHECK_LIB(Xext, XShapeCombineShape,
    SHAPE="-DSHAPE"; LDFLAGS="$LDFLAGS -lXext",
    AC_MSG_WARN([XShape extension support requested but libraries couldn't be found.])
  )
)
AC_SUBST(SHAPE)

dnl Check for XShape extension support and proper library files.
KDE=""
AC_MSG_CHECKING([whether to build support for KDE])
AC_ARG_ENABLE(
  kde, [  --enable-kde            enable support of the KDE [default=no]],
  if test x$enableval = "xyes"; then
    AC_MSG_RESULT([yes])
    KDE="-DKDE"
  else
    AC_MSG_RESULT([no])
  fi,
  AC_MSG_RESULT([no])
)
AC_SUBST(KDE)

dnl Determine the return type of signal handlers
AC_TYPE_SIGNAL

dnl Determine if maintainer portions of the Makefiles should be included.
AM_MAINTAINER_MODE

dnl Print results
AC_MSG_RESULT([])
AC_MSG_RESULT([	$PACKAGE version $VERSION configured successfully.])
AC_MSG_RESULT([])
AC_MSG_RESULT([Using '$prefix' for installation.])
AC_MSG_RESULT([Using '$CXX' for C++ compiler.])
AC_MSG_RESULT([Building with '$CFLAGS' for C compiler flags.])
AC_MSG_RESULT([Building with '$CXXFLAGS' for C++ compiler flags.])
AC_MSG_RESULT([Building with '$LDFLAGS' for linker flags.])
AC_MSG_RESULT([])

dnl Output files
AM_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile src/Makefile util/Makefile data/Makefile data/styles/Makefile version.h)

